--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"prepare": "husky",
-		"eslint:all": "npx eslint .",
-		"prettier:fix": "npx prettier --write ."
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
 	"license": "ISC",
