--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "axios": "^1.7.9",
+    "axios-mock-adapter": "^2.1.0",
     "jest": "^29.7.0",
     "jest-html-reporters": "^3.1.7"
   }
